# FinanceManager

./: CMakeLists.txt  compile.bat  compile.sh  main.cpp
include/: Category.hpp  DatabaseManager.hpp  FinanceManager.hpp  Transaction.hpp  Utils.hpp
src/: DatabaseManager.cpp  FinanceManager.cpp  Utils.cpp  main.cpp
